load("@rules_player//ios:defs.bzl", "ios_pipeline")

ios_pipeline(
    name = "PlayerUISwiftUI",
    resources = [],
    deps = [
        "@swiftpkg_swift_hooks//:Sources_SwiftHooks",
        "//ios/core:PlayerUI"
    ],
    test_deps = [
        "//plugins/reference-assets/swiftui:PlayerUIReferenceAssets",
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities",
        "//ios/test-utils-core:PlayerUITestUtilitiesCore"
    ],
    hasUnitTests = True,
    hasViewInspectorTests = True,
    test_host = "//ios/demo:PlayerUIDemo"
)