load("@rules_pkg//:mappings.bzl", "pkg_files", "strip_prefix")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test", "ios_ui_test")

load("//tools/ios:util.bzl", "ios_bundle_module_shim")

apple_resource_bundle(
    name = "PlayerUITestUtilitiesCoreResourceBundle",
    bundle_name = "TestUtilities",
    bundle_id = "com.intuit.ios.player.resources.core",
    resources = ["//core/make-flow:make-flow_native_bundle"]
)

ios_bundle_module_shim("TestUtilities")

pkg_files(
    name = "PlayerUITestUtilitiesCore_Sources",
    srcs = glob(["Sources/**/*.swift"]),
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "PlayerUITestUtilitiesCore",
    module_name = "PlayerUITestUtilitiesCore",
    srcs = [":PlayerUITestUtilitiesCore_Sources", ":TestUtilitiesResourceShim"],
    visibility = ["//visibility:public"],
    deps = ["//ios/core:PlayerUI", "//ios/swiftui:PlayerUISwiftUI", "//ios/logger:PlayerUILogger"],
    data = [":PlayerUITestUtilitiesCoreResourceBundle"],
    defines = ["BAZEL_TARGET"]
)

ios_unit_test(
    name = "PlayerUITestUtilitiesCoreTests",
    srcs = glob(["Tests/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [
        ":PlayerUITestUtilitiesCore",
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities"
    ],
    visibility = ["//visibility:public"]
)

ios_ui_test(
    name = "PlayerUITestUtilitiesCoreViewInspectorTests",
    srcs = glob(["ViewInspector/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [
        "@swiftpkg_viewinspector//:Sources_ViewInspector",
        "//ios/swiftui:PlayerUISwiftUI", 
        "//ios/core:PlayerUI", 
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities",
        "//plugins/reference-assets/swiftui:PlayerUIReferenceAssets",
        ":PlayerUITestUtilitiesCore"
    ],
    visibility = ["//visibility:public"],
    test_host = "//ios/demo:PlayerUIDemo"
)