load("@rules_player//ios:defs.bzl", "ios_pipeline")

ios_pipeline(
    name = "PlayerUITestUtilitiesCore",
    resources = ["//core/make-flow:make-flow_native_bundle"],
    deps = [
        "//ios/core:PlayerUI",
        "//ios/swiftui:PlayerUISwiftUI",
        "//ios/logger:PlayerUILogger"
    ],
    test_deps = [
        "//plugins/reference-assets/swiftui:PlayerUIReferenceAssets",
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities"
    ],
    hasUnitTests = True,
    hasViewInspectorTests = True,
    test_host = "//ios/demo:PlayerUIDemo"
)