load("@rules_pkg//:mappings.bzl", "pkg_files", "strip_prefix")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test", "ios_ui_test")

pkg_files(
    name = "PlayerUITestUtilities_Sources",
    srcs = glob(["Sources/**/*.swift"]),
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "PlayerUITestUtilities",
    module_name = "PlayerUITestUtilities",
    srcs = [":PlayerUITestUtilities_Sources"],
    # Because this relies on XCTest
    testonly = True,
    visibility = ["//visibility:public"],
    deps = [
        "//ios/core:PlayerUI", 
        "//ios/swiftui:PlayerUISwiftUI", 
        "//ios/logger:PlayerUILogger",
        "//ios/test-utils-core:PlayerUITestUtilitiesCore"
    ],
    defines = ["BAZEL_TARGET"]
)

ios_unit_test(
    name = "PlayerUITestUtilitiesTests",
    srcs = glob(["Tests/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [
        ":PlayerUITestUtilities",
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities"
    ],
    visibility = ["//visibility:public"]
)

ios_ui_test(
    name = "PlayerUITestUtilitiesViewInspectorTests",
    srcs = glob(["ViewInspector/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [
        "@swiftpkg_viewinspector//:Sources_ViewInspector",
        "//ios/swiftui:PlayerUISwiftUI", 
        "//ios/core:PlayerUI", 
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities",
        "//plugins/reference-assets/swiftui:PlayerUIReferenceAssets",
        ":PlayerUITestUtilities"
    ],
    visibility = ["//visibility:public"],
    test_host = "//ios/demo:PlayerUIDemo"
)