load("//tools/ios:util.bzl", "swiftui_plugin")

swiftui_plugin(
    name = "A2UI",
    resources = ["//plugins/a2ui/core:core_native_bundle"],
    deps = [
        "//ios/swiftui:PlayerUISwiftUI",
    ],
    test_deps = [
        "//ios/test-utils:PlayerUITestUtilities",
    ],
    hasUITests = False,
)
