load("//tools/apple:util.bzl", "swiftui_plugin")

swiftui_plugin(
    name = "BeaconPlugin",
    resources = [],
    deps = [
        "//apple/ios:PlayerUISwiftUI",
        "//plugins/beacon/apple:PlayerUIBaseBeaconPlugin"  
    ],
    test_deps = [
        "//plugins/reference-assets/ios:PlayerUIReferenceAssets",
    ]
)