load("@rules_pkg//:mappings.bzl", "pkg_files", "strip_prefix")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test", "ios_ui_test")

pkg_files(
    name = "PlayerUIBeaconPlugin_Sources",
    srcs = glob(["Sources/**/*.swift"]),
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "PlayerUIBeaconPlugin",
    module_name = "PlayerUIBeaconPlugin",
    srcs = [":PlayerUIBeaconPlugin_Sources"],
    visibility = ["//visibility:public"],
    deps = [
        "//ios/core:PlayerUI", 
        "//ios/swiftui:PlayerUISwiftUI",
        "//plugins/beacon/ios:PlayerUIBaseBeaconPlugin"
    ],
    defines = ["BAZEL_TARGET"]
)

ios_ui_test(
    name = "PlayerUIBeaconPluginViewInspectorTests",
    srcs = glob(["ViewInspector/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [
        "@swiftpkg_viewinspector//:Sources_ViewInspector",
        ":PlayerUIBeaconPlugin", 
        "//ios/core:PlayerUI", 
        "//ios/swiftui:PlayerUISwiftUI",
        "//plugins/reference-assets/swiftui:PlayerUIReferenceAssets",
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities"
    ],
    visibility = ["//visibility:public"],
    test_host = "//ios/demo:PlayerUIDemo"
)