load("//tools/ios:util.bzl", "swiftui_plugin")

swiftui_plugin(
    name = "BeaconPlugin",
    resources = [],
    deps = [
        "//ios/swiftui:PlayerUISwiftUI",
        "//plugins/beacon/ios:PlayerUIBaseBeaconPlugin"  
    ],
    test_deps = [
        "//plugins/reference-assets/swiftui:PlayerUIReferenceAssets",
    ]
)