load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test", "ios_ui_test")


swift_library(
    name = "PlayerUISwiftUICheckPathPlugin",
    module_name = "PlayerUISwiftUICheckPathPlugin",
    srcs = glob(["Sources/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        "//ios/core:PlayerUI", 
        "//ios/swiftui:PlayerUISwiftUI",
        "//plugins/check-path/ios:PlayerUICheckPathPlugin"
    ],
    defines = ["BAZEL_TARGET"]
)

ios_ui_test(
    name = "PlayerUISwiftUICheckPathPluginViewInspectorTests",
    srcs = glob(["ViewInspector/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [
        "@swiftpkg_viewinspector//:Sources_ViewInspector",
        ":PlayerUISwiftUICheckPathPlugin", 
        "//ios/core:PlayerUI", 
        "//ios/swiftui:PlayerUISwiftUI",
        "//ios/internal-test-utils:PlayerUIInternalTestUtilities"
    ],
    visibility = ["//visibility:public"],
    test_host = "//ios/demo:PlayerUIDemo"
)