load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

load("//tools/ios:util.bzl", "ios_bundle_module_shim")

apple_resource_bundle(
    name = "PlayerUICommonExpressionsPluginResourceBundle",
    bundle_name = "CommonExpressionsPlugin",
    bundle_id = "com.intuit.ios.player.resources.core",
    resources = glob(["Resources/**/*"])
)

ios_bundle_module_shim("CommonExpressionsPlugin")

swift_library(
    name = "PlayerUICommonExpressionsPlugin",
    module_name = "PlayerUICommonExpressionsPlugin",
    srcs = glob(["Sources/**/*.swift"]) + [":CommonExpressionsPluginResourceShim"],
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["//ios/core:PlayerUI"],
    data = [":PlayerUICommonExpressionsPluginResourceBundle"],
    defines = ["BAZEL_TARGET"]
)

ios_unit_test(
    name = "PlayerUICommonExpressionsPluginTests",
    srcs = glob(["Tests/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [":PlayerUICommonExpressionsPlugin", "//ios/internal-test-utils:PlayerUIInternalTestUtilities"],
    visibility = ["//visibility:public"]
)