load("@rules_pkg//:mappings.bzl", "pkg_files", "strip_prefix")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

load("//tools/ios:util.bzl", "ios_bundle_module_shim")

apple_resource_bundle(
    name = "PlayerUICommonTypesPluginResourceBundle",
    bundle_name = "CommonTypesPlugin",
    bundle_id = "com.intuit.ios.player.resources.core",
    resources = ["//plugins/common-types/core:core_native_bundle"]
)

ios_bundle_module_shim("CommonTypesPlugin")

pkg_files(
    name = "PlayerUICommonTypesPlugin_Sources",
    srcs = glob(["Sources/**/*.swift"]),
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "PlayerUICommonTypesPlugin",
    module_name = "PlayerUICommonTypesPlugin",
    srcs = [":PlayerUICommonTypesPlugin_Sources", ":CommonTypesPluginResourceShim"],
    visibility = ["//visibility:public"],
    deps = ["//ios/core:PlayerUI"],
    data = [":PlayerUICommonTypesPluginResourceBundle"],
    defines = ["BAZEL_TARGET"]
)

ios_unit_test(
    name = "PlayerUICommonTypesPluginTests",
    srcs = glob(["Tests/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [":PlayerUICommonTypesPlugin", "//ios/internal-test-utils:PlayerUIInternalTestUtilities"],
    visibility = ["//visibility:public"]
)