load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

load("//tools/ios:util.bzl", "ios_bundle_module_shim")

apple_resource_bundle(
    name = "PlayerUIComputedPropertiesPluginResourceBundle",
    bundle_name = "ComputedPropertiesPlugin",
    bundle_id = "com.intuit.ios.player.resources.core",
    resources = ["//plugins/computed-properties/core:core_native_bundle"]
)

ios_bundle_module_shim("ComputedPropertiesPlugin")

swift_library(
    name = "PlayerUIComputedPropertiesPlugin",
    module_name = "PlayerUIComputedPropertiesPlugin",
    srcs = glob(["Sources/**/*.swift"]) + [":ComputedPropertiesPluginResourceShim"],
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["//ios/core:PlayerUI"],
    data = [":PlayerUIComputedPropertiesPluginResourceBundle"],
    defines = ["BAZEL_TARGET"]
)

ios_unit_test(
    name = "PlayerUIComputedPropertiesPluginTests",
    srcs = glob(["Tests/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [":PlayerUIComputedPropertiesPlugin", "//ios/internal-test-utils:PlayerUIInternalTestUtilities"],
    visibility = ["//visibility:public"]
)