load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

swift_library(
    name = "PlayerUIPrintLoggerPlugin",
    module_name = "PlayerUIPrintLoggerPlugin",
    srcs = glob(["Sources/**/*.swift"]),
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["//ios/core:PlayerUI", "//ios/logger:PlayerUILogger"],
    defines = ["BAZEL_TARGET"]
)

ios_unit_test(
    name = "PlayerUIPrintLoggerPluginTests",
    srcs = glob(["Tests/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [":PlayerUIPrintLoggerPlugin", "//ios/internal-test-utils:PlayerUIInternalTestUtilities"],
    visibility = ["//visibility:public"]
)