load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_bundle")

load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

load("//tools/ios:util.bzl", "ios_bundle_module_shim")

apple_resource_bundle(
    name = "PlayerUIExpressionPluginResourceBundle",
    bundle_name = "ExpressionPlugin",
    bundle_id = "com.intuit.ios.player.resources.core",
    resources = glob(["Resources/**/*"])
)

ios_bundle_module_shim("ExpressionPlugin")

swift_library(
    name = "PlayerUIExpressionPlugin",
    module_name = "PlayerUIExpressionPlugin",
    srcs = glob(["Sources/**/*.swift"]) + [":ExpressionPluginResourceShim"],
    # tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["//ios/core:PlayerUI"],
    data = [":PlayerUIExpressionPluginResourceBundle"],
    defines = ["BAZEL_TARGET"]
)

ios_unit_test(
    name = "PlayerUIExpressionPluginTests",
    srcs = glob(["Tests/**/*.swift"]),
    minimum_os_version = "14.0",
    deps = [":PlayerUIExpressionPlugin", "//ios/internal-test-utils:PlayerUIInternalTestUtilities"],
    visibility = ["//visibility:public"]
)